C#: Add CD pipeline
Added `.github/workflows/csharp-cd.yml` for automated C# project releases, including versioning, publishing to NuGet, and handling multi-platform requirements. Updated `build-matrix.json` to include dotnet support. Enhanced `assets.props` with conditional checks to skip unnecessary asset builds (also prevents the job to fail, as the assets need special setup). Finally, add upload assets to workflow.

Signed-off-by: X39 <marco@silipo.de>

--- a/csharp/assets/Valkey.Glide.Assets.Win32/Valkey.Glide.Assets.Win32.csproj
+++ b/csharp/assets/Valkey.Glide.Assets.Win32/Valkey.Glide.Assets.Win32.csproj
@@ -7,6 +7,7 @@
     <Platform>x86</Platform>
     <PlatformTarget>x86</PlatformTarget>
     <RustTuple>i686-pc-windows-msvc</RustTuple>
+    <LibraryExtension>.dll</LibraryExtension>
   </PropertyGroup>
 
   <Import Project="$(MSBuildThisFileDirectory)../../props/version.props"/>
