--- a/csharp/assets/Valkey.Glide.Assets.All/Valkey.Glide.Assets.All.csproj
+++ b/csharp/assets/Valkey.Glide.Assets.All/Valkey.Glide.Assets.All.csproj
@@ -16,12 +16,13 @@
   <Import Project="$(MSBuildThisFileDirectory)../../props/version.props"/>
 
   <ItemGroup>
+    <!-- The references commented out are currently not built by cd -->
     <ProjectReference Include="..\Valkey.Glide.Assets.Linux64Gnu\Valkey.Glide.Assets.Linux64Gnu.csproj" />
-    <ProjectReference Include="..\Valkey.Glide.Assets.Linux64Musl\Valkey.Glide.Assets.Linux64Musl.csproj" />
-    <ProjectReference Include="..\Valkey.Glide.Assets.LinuxArm64Gnu\Valkey.Glide.Assets.LinuxArm64Gnu.csproj" />
-    <ProjectReference Include="..\Valkey.Glide.Assets.LinuxArm64Musl\Valkey.Glide.Assets.LinuxArm64Musl.csproj" />
+<!--    <ProjectReference Include="..\Valkey.Glide.Assets.Linux64Musl\Valkey.Glide.Assets.Linux64Musl.csproj" />-->
+<!--    <ProjectReference Include="..\Valkey.Glide.Assets.LinuxArm64Gnu\Valkey.Glide.Assets.LinuxArm64Gnu.csproj" />-->
+<!--    <ProjectReference Include="..\Valkey.Glide.Assets.LinuxArm64Musl\Valkey.Glide.Assets.LinuxArm64Musl.csproj" />-->
     <ProjectReference Include="..\Valkey.Glide.Assets.MacOSArm64\Valkey.Glide.Assets.MacOSArm64.csproj" />
-    <ProjectReference Include="..\Valkey.Glide.Assets.Win32\Valkey.Glide.Assets.Win32.csproj" />
+<!--    <ProjectReference Include="..\Valkey.Glide.Assets.Win32\Valkey.Glide.Assets.Win32.csproj" />-->
     <ProjectReference Include="..\Valkey.Glide.Assets.Win64\Valkey.Glide.Assets.Win64.csproj" />
   </ItemGroup>
 
