--- a/csharp/assets/Valkey.Glide.Assets.Linux64Gnu/Valkey.Glide.Assets.Linux64Gnu.csproj
+++ b/csharp/assets/Valkey.Glide.Assets.Linux64Gnu/Valkey.Glide.Assets.Linux64Gnu.csproj
@@ -7,6 +7,7 @@
     <Platform>x64</Platform>
     <PlatformTarget>x64</PlatformTarget>
     <RustTuple>x86_64-unknown-linux-gnu</RustTuple>
+    <LibraryExtension>.so</LibraryExtension>
   </PropertyGroup>
 
   <Import Project="$(MSBuildThisFileDirectory)../../props/version.props"/>
