--- a/csharp/assets/Valkey.Glide.Assets.LinuxArm64Musl/Valkey.Glide.Assets.LinuxArm64Musl.csproj
+++ b/csharp/assets/Valkey.Glide.Assets.LinuxArm64Musl/Valkey.Glide.Assets.LinuxArm64Musl.csproj
@@ -7,6 +7,7 @@
     <Platform>ARM64</Platform>
     <PlatformTarget>ARM64</PlatformTarget>
     <RustTuple>aarch64-unknown-linux-musl</RustTuple>
+    <LibraryExtension>.so</LibraryExtension>
   </PropertyGroup>
 
   <Import Project="$(MSBuildThisFileDirectory)../../props/version.props"/>
