format and cluster aspire setup
Signed-off-by: X39 <marco@silipo.de>

--- a/csharp/tests/Valkey.Glide.AppHost/Valkey.Glide.AppHost.csproj
+++ b/csharp/tests/Valkey.Glide.AppHost/Valkey.Glide.AppHost.csproj
@@ -16,8 +16,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
-        <PackageReference Include="Aspire.Hosting.Valkey" Version="9.1.0" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="ValkeyWith8080HttpHealthCheck\Dockerfile">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
